...
    android:layout_height="match_parent"
    android:layout_margin="1sp"
    android:id = "@+id/adv_search_layout"
    android:background="@drawable/fragmentborder"
    android:orientation="vertical"
...

    <LinearLayout
        android:id="@+id/mobileSearchMainLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
...
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mobile_layout"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_round"
                android:id="@+id/search_et_mobile_no"
                android:paddingLeft="2sp"
                android:inputType="number"
...
    </LinearLayout>
    <LinearLayout
        android:id="@+id/advSearchMainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
                android:id="@+id/advSearch_headerTextView"
                android:gravity="center"
                android:text="Advance Search"
                android:layout_width="fill_parent"
                android:textColor="#FFFFFF"
...
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout android:id="@+id/name_age"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:id="@+id/advClient_name"
                android:paddingLeft="10dp"
                android:layout_weight="5"/>
...
                android:layout_width="0dp"
                android:background="@drawable/gradient_spinner"
                android:id="@+id/advClientsSexSpinner"
                android:entries="@array/nrcClientsSex"
                android:paddingLeft="5dp"
...
        </LinearLayout>
        <LinearLayout
            android:id="@+id/serviceTypeLayout"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:layout_weight="2"/>

            <Spinner  android:id="@+id/advSearchServiceTypeSpinner"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
...
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dateRangeSearchLayout"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...

            <EditText
                android:id="@+id/searchStartDateEditText"
                android:hint=""
                android:paddingLeft="2sp"
...
                android:layout_weight="1"/>

            <EditText android:id="@+id/searchEndDateEditText"
                android:hint=""
                android:layout_marginTop="5dp"
...

        <LinearLayout
            android:id="@+id/father_district"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_spinner"
                android:id="@+id/advSearchDistrict"
                android:paddingLeft="10dp"
                android:layout_weight="3" />
...
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_spinner"
                android:id="@+id/advSearchUpazila"
                android:paddingLeft="10dp"
                android:layout_weight="3"
...

        <LinearLayout
            android:id="@+id/union_village"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_spinner"
                android:id="@+id/advSearchUnion"
                android:paddingLeft="10dp"
                android:layout_marginBottom="5dp"
...
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_spinner"
                android:id="@+id/advSearchVillage"
                android:paddingLeft="10dp"
                android:layout_marginBottom="5dp"
...

    <LinearLayout
        android:id="@+id/search_button_layout"
        android:layout_marginTop="5sp"
        android:orientation="horizontal"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/advSearchBtn"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
...
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:background="@drawable/button_style"
            android:text="SEARCH"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelBtn"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
...
            android:ellipsize="start"
            android:background="@drawable/button_style"
            android:text="CANCEL"/>

    </LinearLayout>
...
