...
    <string name="search_here">Search From Here</string>
    <string name="satellite_session_planning">স্যাটেলাইট সেশন পরিকল্পনা</string>
    <!--Hard Coded String converted-->

    <!--ADVSearch Activity-->
    <string name="empty_string">" "</string>
    <string name="anc_string">"ANC"</string>
    <string name="delivery_string">"DELIVERY"</string>
    <string name="pnc_string">"PNC"</string>
    <string name="spouse_string">Spouse</string>
    <string name="string_mobile_search">"Mobile Search"</string>
    <string name="string_advance_search">"Advance Search"</string>
    <string name="string_service_search">"Service Search"</string>
    <string name="string_preg_women_search">"গর্ভবতী মহিলা অনুসন্ধান"</string>
    <string name="string_search_result">"অনুসন্ধানের ফলাফল ("</string>
    <string name="string_search_result_person">" জন)"</string>
    <string name="string_search_result_null">"আপনার প্রদেয় তথ্য অনুযায়ী কাউকে খূঁজে পাওয়া যায়নি!"</string>
    <string name="string_wife">"Wife"</string>
    <string name="string_husband">"Husband"</string>
...
    <string name="str_correct_fp_method_selection">"গ্রহীতার জন্য উপযুক্ত পদ্ধতি সমূহ সম্পর্কে নির্ভুল তথ্য প্রদান করে আলাপ-আলোচনার মাধ্যমে গ্রহীতার পছন্দসই ও সঠিক পদ্ধতি"</string>
    <string name="str_refer_properly">"গ্রহীতাকে উপযুক্ত স্বাস্থ্যকেন্দ্রে রেফার করুন ।"</string>

    <string name="temp_celsius"> &#176;সে</string>
    <string name="temp_celsius_entry"> &#176;সে এন্ট্রি</string>
    <string name="satellite_months_selection">Select months to submit</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_reset">Reset</string>


    <!-- Satellite Session Planning-->
    <string-array name="month">
...
