...
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginBottom="3dp">

                <Spinner
                    android:id="@+id/ClientsIdentityDropdown"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:drawSelectorOnTop="true"
                    android:layout_weight="2"
                    android:background="@drawable/gradient_spinner"
                    android:layout_gravity="right|top" />
                <EditText
                    android:id="@+id/searchableTextId"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="2sp"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
...
                    android:ellipsize="start"
                    android:inputType="number"
                    android:background="@drawable/edittext_round"
                    android:layout_gravity="center|top"/>

                <ImageButton
                    android:id="@+id/searchButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center|top"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
...
