...
                            android:layout_marginLeft="5dp"
                            android:text="@string/general_advice"
                            android:textColor="@color/black"
                            android:textSize="18dp" />

                        <TextView
                            android:id="@+id/text1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/c32T1"
                            android:textColor="@color/black"
                            android:textSize="18dp" />
...
